--- a/static/css/sections/skills.css
+++ b/static/css/sections/skills.css
@@ -58,7 +58,7 @@
     padding-right: 0;
   }
   .skills-section .container {
-    max-width: 100%;
+    max-width: 95%;
   }
 }
 
